Update 'test-rel-arttekgo' component image to: artifactory-artifactory-jcr.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap-docker-local/demo:0f4b3aaa74121908a60f6282ff475b7f389aa3dd@sha256:d6e1bf65afc2a658030032b070a46212e0211d9f5ce785128ab0be03a611d161

--- a/components/test-rel-arttekgo/overlays/development/deployment-patch.yaml
+++ b/components/test-rel-arttekgo/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: test-rel-arttekgo
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: artifactory-artifactory-jcr.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap-docker-local/demo:0f4b3aaa74121908a60f6282ff475b7f389aa3dd@sha256:d6e1bf65afc2a658030032b070a46212e0211d9f5ce785128ab0be03a611d161
+          name: container-image
